deploy/k8s/23-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: aparte
spec:
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
